debug toolbar buttons spacing. issue 830

--- a/src/TadbirNG/SPPC.Tadbir.Web/ClientApp/src/app/shared/components/toolbar/leftActionToolbar.component.css
+++ b/src/TadbirNG/SPPC.Tadbir.Web/ClientApp/src/app/shared/components/toolbar/leftActionToolbar.component.css
@@ -1,4 +1,3 @@
-.lm {
-  margin-left: 2px !important;
-  margin-right: 0px !important;
-}
+:host{
+  margin: 0;
+} 
