--- a/src/TadbirNG/SPPC.Tadbir.Web/ClientApp/src/app/shared/directive/grid/component/grid-filter.component.css
+++ b/src/TadbirNG/SPPC.Tadbir.Web/ClientApp/src/app/shared/directive/grid/component/grid-filter.component.css
@@ -1,7 +1,3 @@
-﻿.filterMargin {
-    margin-left:4px;
-}
-
-.TLTR.sh-execute-filter{
-    margin-left: 2px;
+:host{
+    margin: 0;
 }
